<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="5dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pamlet"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:paddingLeft="5dp"
                android:src="@drawable/event_ic" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center|left"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/judul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/list_a"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/narasumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/list_f"
                    android:textColor="@color/mainColor" />

                <TextView
                    android:id="@+id/waktu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/list_b"
                    android:textColor="@color/mainTextDark" />

                <TextView
                    android:id="@+id/keca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/kec"
                    android:textColor="@color/mainTextDark" />

                <TextView
                    android:id="@+id/kaba"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/kab"
                    android:autoLink="web"
                    android:textColor="@color/mainTextDark" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="2dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cost"
                    android:textColor="@color/mainTextDark"
                    android:textSize="10dp" />

                <TextView
                    android:id="@+id/cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/list_d"
                    android:textColor="@color/mainColor"
                    android:textSize="10dp" />

                <View
                    android:layout_width="80dp"
                    android:layout_height="1dp"
                    android:background="@color/mainColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/user"
                    android:textColor="@color/mainTextDark"
                    android:textSize="10dp" />

                <TextView
                    android:id="@+id/participant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_e"
                    android:textColor="@color/mainColor"
                    android:textSize="10dp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>