<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MySignIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/mainBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--header Description App-->

        <LinearLayout
            android:id="@+id/one"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/doctor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vellid Event"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

        </LinearLayout>

        <!--area Form Login-->

        <LinearLayout
            android:id="@+id/two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/in"
                android:textColor="@color/mainTextDark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/mail_ic" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/usrlogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTintMode="@color/mainColor"
                        android:hint="@string/mail"
                        android:inputType="textEmailAddress"
                        android:textSize="12dp" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/pass_ic" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/pwlogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTintMode="@color/mainColor"
                        android:hint="@string/pass"
                        android:inputType="textPassword"
                        android:textSize="12dp" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/login"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/m_button"
                android:text="@string/in"
                android:textAllCaps="false"
                android:textColor="@color/c_white"
                android:textSize="17dp" />

            <Button
                android:id="@+id/tekssignup"
                android:layout_width="243dp"
                android:layout_height="29dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:text="@string/not_acc"
                android:textAllCaps="false"
                android:textColor="@color/mainTextDark"
                android:textSize="14dp" />

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>